objects/Laser_Artwork_Order__c.object
<CustomObject>
    <fields>
        <fullName>ACT_Create_Date__c</fullName>
        <label>ACT Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_ID__c</fullName>
        <description>id linking to act record imported</description>
        <label>ACT_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Modified_Date__c</fullName>
        <label>ACT Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Forms_Pulled_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Forms Pulled Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANM_Forms_Mapped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ANM Forms Mapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_P_Check_Order_Actual_End_Date__c</fullName>
        <inlineHelpText>Date A/P Check Order Confirmation # is entered or A/P Check Order is declined.</inlineHelpText>
        <label>A/P Check Order Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>A_P_Check_Order_Actual_Start_Date__c</fullName>
        <formula>IF( A_P_Check_Order_Declined__c = True,  A_P_Check_Order_Actual_End_Date__c ,  A_P_Check_Order_Placed__c )</formula>
        <label>A/P Check Order Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>A_P_Check_Order_Confirmation__c</fullName>
        <label>A/P Check Order Confirmation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_P_Check_Order_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A/P Check Order Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_P_Check_Order_Placed__c</fullName>
        <label>A/P Check Order Placed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_Change_Pilot_Feedback__c</fullName>
        <label>Add/Change Pilot Feedback</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Change_Pilot__c</fullName>
        <label>Add/Change Pilot</label>
        <picklist>
            <picklistValues>
                <fullName>No Mockups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAS/LFD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingStreet &amp; BR() &amp; 
 Ship_CMF_Info__r.Account__r.BillingCity &amp; &quot;, &quot; &amp;  Ship_CMF_Info__r.Account__r.BillingState &amp; &quot; &quot; &amp; 
 Ship_CMF_Info__r.Account__r.BillingPostalCode &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_forms_Loaded_to_Client_s_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All forms Loaded to Client’s System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Client__c</fullName>
        <label>Approved by Client</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Artwork_CDF_Line_Installed__c</fullName>
        <description>Artwork CDF Line Installed</description>
        <label>Artwork CDF Line Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Due_Date__c</fullName>
        <label>Artwork Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Artwork_Received__c</fullName>
        <label>Artwork Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Started__c</fullName>
        <label>Artwork Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Vision_Case_Link__c</fullName>
        <description>Vision Case #</description>
        <formula>IF (NOT ( ISBLANK( Artwork_Vision_Case__c )), hyperlink(&quot;http://dstdevwebint1he.ds.ad.adp.com/AutoToolsX/Vision/VisionPrintPage.aspx?IdNumber=&quot; &amp; Artwork_Vision_Case__c &amp; &quot;&amp;PrintActivityLogFlag=false&amp;OutputType=html&amp;LoginName=&quot; &amp; IF(ISBLANK($User.FirstName), $User.LastName, $User.FirstName &amp; &quot; &quot; &amp; $User.LastName ), &quot;Open Vision Case&quot;), &quot; &quot;)</formula>
        <inlineHelpText>Vision Case # required to view the Open Vision Case link</inlineHelpText>
        <label>Artwork/Install Vision Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artwork_Vision_Case__c</fullName>
        <label>Artwork/Install Vision Case #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artwork_to_LFD_Team__c</fullName>
        <label>Artwork to LFD Team</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Forms_Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Forms Builder</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.(Assigned Forms Builder)</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LFB - Donald</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LFB - Jim</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>COE - FB</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_IFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned IFA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LFB - Donald</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LFB - Jim</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>COE - FB</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_LFA_Fax_Number__c</fullName>
        <formula>Assigned_LFA__r.Fax</formula>
        <label>Assigned LFA Fax Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_LFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned LFA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LFB - Donald</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LFB - Jim</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>COE - FB</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_LI_Team__c</fullName>
        <label>At LI Team</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <label>Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Feedback__c</fullName>
        <label>Audit Feedback</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Status__c</fullName>
        <label>Audit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <label>Auditor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BSC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Binder_Sent__c</fullName>
        <label>Binder Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Burn_Completed__c</fullName>
        <description>Burn Completed</description>
        <label>Burn Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>By_Pass_Forms_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Forms Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Notes__c</fullName>
        <label>Change Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City_Hidden__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_State_Zip__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingCity &amp; &quot;, &quot; &amp;  Ship_CMF_Info__r.Account__r.BillingState &amp; &quot; &quot; &amp; 
 Ship_CMF_Info__r.Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Burn_by__c</fullName>
        <description>Complete Burn by</description>
        <label>Complete Burn by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conditional_A_R_Statement__c</fullName>
        <label>Conditional A/R Statement</label>
        <summarizedField>Laser_Ordered_Forms__c.Conditional_A_R_Statement__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_City_Hidden__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_City_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City_State_Zip_Hidden__c</fullName>
        <formula>Contact__r.MailingCity  &amp; &quot;, &quot; &amp;  Contact__r.MailingState  &amp; &quot; &quot; &amp; 
 Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_City_State_Zip_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Hidden__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact_Email_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fax_Hidden__c</fullName>
        <formula>Contact__r.Fax</formula>
        <label>Contact_Fax_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Hidden__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_Phone_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State_Hidden__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_State_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street_HIDDEN__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_Street_HIDDEN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ZIP_Hidden__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_ZIP_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N40000001lfVXEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_PO__c</fullName>
        <label>Contract/PO#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Approved_by_Client_ELF_Only__c</fullName>
        <label>Data Approved by Client (ELF Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Mapping__c</fullName>
        <label>Data Mapping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Proofs_to_Client_ELF_Only__c</fullName>
        <label>Data Proofs to Client (ELF Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Forms_Shipped__c</fullName>
        <label>Date Forms Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlements_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entitlements Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Date__c</fullName>
        <label>Estimated Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Transition_Date__c</fullName>
        <formula>Go_Live_Date__c + 35</formula>
        <label>Estimated Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FA_Completed__c</fullName>
        <label>FA Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FA_Signed__c</fullName>
        <label>FA Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCC_Email_Hidden__c</fullName>
        <formula>FCC_Name__r.Email</formula>
        <label>FCC_Email_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCC_Name_Hidden__c</fullName>
        <formula>FCC_Name__r.FirstName + &apos; &apos; +  FCC_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCC Name Actual - Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCC Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.(FCC Name)</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - FCC - Bridgette</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Laser - FCC</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCC_Notes__c</fullName>
        <label>FCC Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCC_Phone_Hidden__c</fullName>
        <formula>FCC_Name__r.Phone</formula>
        <label>FCC_Phone_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCC_Title_Hidden__c</fullName>
        <formula>FCC_Name__r.Title</formula>
        <label>FCC_Title_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE_Date__c</fullName>
        <label>FE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Order4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_FA_Completed__c</fullName>
        <label>FA Completed (FI/DC Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Notice_Letter_Sent__c</fullName>
        <label>Final Notice Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Adjustment__c</fullName>
        <label>Form Adjustment</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Builder_Status__c</fullName>
        <label>Form Builder Status</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Testing (Unhook)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loaded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Charge_Total__c</fullName>
        <label>Form Charge Total</label>
        <summarizedField>Laser_Ordered_Forms__c.Unit_Price_Override__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forms_Builder_Notes__c</fullName>
        <label>Forms Builder Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forms_Collected__c</fullName>
        <label>Forms Collected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Copied_to_G__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forms Copied to G:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forms_Installed__c</fullName>
        <label>Forms Installed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forms_Loaded__c</fullName>
        <label>Forms Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Posted__c</fullName>
        <label>Forms Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Posted_to_KL__c</fullName>
        <label>Forms Posted to KL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Test_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forms Test Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forms_to_LIS_Team__c</fullName>
        <label>Forms to LIS Team</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday_Change_Case_Contact_email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vision Updates - Change Case Contact (email included)</inlineHelpText>
        <label>Friday(Change Case Contact email)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Ensure_Logon_is_in_Library__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Library Updates - Ensure Logon is in Library</inlineHelpText>
        <label>Friday(Ensure Logon is in Library)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Remove_Internal_Case_Checkmark__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vision Updates - Remove Internal Case Checkmark</inlineHelpText>
        <label>Friday(Remove Internal Case Checkmark)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Set_CBE_to_transition_date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vision Updates - Set CBE to transition date (5 weeks from Monday of install)</inlineHelpText>
        <label>Friday(Set CBE to transition date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Update_the_Forms_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Library Updates - Update the Forms Count in the Dealership’s Account</inlineHelpText>
        <label>Friday(Update the Forms Count)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generics__c</fullName>
        <label>Generics</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact_F_I_Forms_Received__c</fullName>
        <label>Impact F&amp;I Forms Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact_Project_Numbers__c</fullName>
        <label>Impact Project Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Client_Contact__c</fullName>
        <label>Initial Client Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Week_Adj_Expectations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Expectations are that all adjustments are turned around ASAP.  As a Team Goal, we will always try getting adjustments back Same Day for the BSC onsite.  The latest an adjustment should take is 24 hours from the time of arrival.</inlineHelpText>
        <label>Install Week(Adj. Expectations)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Week_All_Adj_Documented__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All adjustments need to be documented in the case.  This includes all attachments and all notes of what was completed.</inlineHelpText>
        <label>Install Week(All Adj. Documented)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructional_Forms_Copied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instructional Forms Copied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <label>Is Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Order2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KnowledgeLake_Link__c</fullName>
        <description>Open KnowledgeLake</description>
        <formula>If(CONTAINS(Name,&quot;LAO&quot;),hyperlink(&quot;http://&quot; &amp;  $Setup.CustomSettings__c.KnowledgeLakeServer__c  &amp; &quot;/sites/laserimaging/Pages/LAOSearch.aspx?LAO=&quot; &amp; SUBSTITUTE(Name , &quot;LAO - &quot;, &quot;&quot;), &quot;Open KnowledgeLake&quot;, &quot;_blank&quot;),hyperlink(&quot;http://&quot; &amp;  $Setup.CustomSettings__c.KnowledgeLakeServer__c  &amp; &quot;/sites/laserimaging/Pages/LAOSearch.aspx?LAO=&quot; &amp; SUBSTITUTE(Name , &quot;FO - &quot;, &quot;&quot;), &quot;Open KnowledgeLake&quot;, &quot;_blank&quot;))</formula>
        <label>KnowledgeLake Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO_Number__c</fullName>
        <formula>RIGHT(Name,len(Name)-6)</formula>
        <label>LAO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO_Value__c</fullName>
        <label>Artwork Value $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAS_Correction_Needed__c</fullName>
        <label>(LAS) Correction Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAS_Email__c</fullName>
        <formula>LAS_Name__r.Email</formula>
        <label>LAS Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAS_Fax__c</fullName>
        <formula>LAS_Name__r.Fax</formula>
        <label>LAS Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAS_LIS_Info_Updated__c</fullName>
        <label>(LAS) LIS Info Updated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAS_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAS Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.(LAS Name)</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialists - LAS - Beczkiewicz</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Laser - RRP</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LAS - Bridgette</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>COE - LAS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAS_Phone__c</fullName>
        <formula>LAS_Name__r.Phone</formula>
        <label>LAS Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAS_Q_S_Sent_in_KL__c</fullName>
        <label>(LAS) Q/S Sent in KL</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAS_Title__c</fullName>
        <formula>LAS_Name__r.Title</formula>
        <label>LAS Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAS_Total_Order_Complete__c</fullName>
        <label>(LAS) Total Order Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LFA_Status__c</fullName>
        <label>LFA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Client Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LFB_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LFB Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialists - LFB - Beczkiewicz</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LFD_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LFD Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.(LFD Name)</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialists - LFD - McCullagh</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Laser - RRP</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LFD - Bridgette</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>COE - LFD</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>